syntax = "proto3";


package datastore;
option go_package = "github.com/dimitriosvasilas/modqp/dataStore/protos";

import "qpu.proto";

service DataStore {
  rpc PutObjectMD(PutObjMDRequest) returns (PutObjMDReply) {}
  rpc GetObjectMD(GetObjMDRequest) returns (GetObjMDReply) {}
  rpc GetSnapshot(SubRequest) returns (stream StateStream) {}
  rpc SubscribeOps(SubRequest) returns (stream OpStream) {}
}

message PutObjMDRequest {
  string key = 1;
  map<string, int64> attributes = 2;
}

message GetObjMDRequest {
  string key = 1;
  int64 timestamp = 2;
}

message SubRequest {
  int64 timestamp = 1;
}

message PutObjMDReply {
  string message = 1;
  int64 timestamp = 2;
}

message GetObjMDReply {
  string message = 1;
  qpu.Object object = 2;
}

message OpStream {
  string type = 1;
  qpu.Object state = 2;
  qpu.Operation operation = 3;
}

message StateStream {
  qpu.Object object = 1;
}